--- a/package.json
+++ b/package.json
@@ -7,16 +7,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint-css": "stylelint src/**/*.css"
+    "lint-css": "stylelint src/**/*.css",
+    "test": "jest",
+    "test:ai": "node scripts/test-ai-integration.js",
+    "prepare:deployment": "node scripts/prepare-deployment.js",
+    "deploy:staging": "docker-compose -f docker-compose.yml up -d",
+    "deploy:production": "docker-compose -f docker-compose.yml up -d",
+    "migrate": "sh scripts/migrate.sh"
   },
   "dependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.427.0",
-    "next": "^14.2.32",
+    "next": "^14.2.4",
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
@@ -25,9 +32,20 @@
     "typescript": "^5"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "babel-jest": "^30.1.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "jest": "^30.1.1",
+    "jest-environment-jsdom": "^30.1.1",
     "stylelint": "^16.23.1",
-    "stylelint-config-standard": "^39.0.0"
+    "stylelint-config-standard": "^39.0.0",
+    "ts-jest": "^29.4.1"
   }
 }
